# continuumd

./: .gitignore  Cargo.toml  DESIGN.md  DOCS.md  FINDINGS.md  LICENSE  README.md  babilong_result.txt  endurance.py  endurance_log.jsonl  fetch_babilong.py  judge_frontier.py  leak_gauntlet.py  stress_discriminate.py  stress_disjoint.py
app/: index.html  package-lock.json  package.json  vite.config.ts
app/src/: App.tsx  Root.tsx  api.ts  main.tsx  router.tsx  styles.css  types.ts
app/src/components/: ContextGauge.tsx  Inspector.tsx  ModelSwitcher.tsx
app/src/pages/: Landing.tsx  Thesis.tsx
app/src/views/: Memory.tsx  Settings.tsx  Timeline.tsx
daemon/: Cargo.toml
daemon/src/: api.rs  bedrock.rs  calc.rs  journal.rs  main.rs  mcp.rs  providers.rs  state.rs  websearch.rs  worker.rs
examples/: retrieval_probe.rs
fullbench_struct_ungate/: lme_knowledge_update_ungate.jsonl  lme_multi_session_ungate.jsonl  lme_single_session_assistant_ungate.jsonl  lme_single_session_preference_ungate.jsonl  lme_single_session_user_ungate.jsonl  lme_temporal_reasoning_ungate.jsonl
fullbench_struct_ungate2/: lme_knowledge_update_ungate2.jsonl  lme_multi_session_ungate2.jsonl  lme_single_session_assistant_ungate2.jsonl  lme_single_session_preference_ungate2.jsonl  lme_single_session_user_ungate2.jsonl
harnesses/: stress_discriminate.py
probes/: contriever_dense.py  hipporag_probe.py  lightrag_probe.py  lightrag_query.py  nomic_passage.py  probe_labels.py
src/: driver.rs  hierarchical.rs  kernel.rs  main.rs  ollama.rs
