[package]
name = "aios-daemon"
version = "0.1.0"
edition = "2021"
description = "AIOS daemon — the long-lived localhost service that owns the kernel, the store, the journal, and all provider connections."

[[bin]]
name = "aios-daemon"
path = "src/main.rs"

[dependencies]
aios = { path = ".." }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# TLS-capable HTTP client for the Claude / OpenAI-compatible adapters.
# Everything localhost (ollama, llama-server) also goes through it for
# streaming-with-cancellation, which the dependency-free client lacks.
ureq = { version = "2.10", features = ["json"] }
base64 = "0.22"
